# tokenfuse

./: .dockerignore  .gitattributes  .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  action.yml
.github/workflows/: bench.yml  ci.yml  mcp-scan-example.yml  release.yml
bench/: README.md  mock_upstream.py  post_direct.lua  post_gw.lua  run.sh
cloud/: docker-compose.yml
cloud/control-plane/: .gitignore  Dockerfile  go.mod  index.html  main.go  main_test.go  store.go  store_test.go
cloud/dashboard/: Dockerfile  package-lock.json  package.json
cloud/dashboard/app/: globals.css  layout.tsx  page.tsx
crates/cloud/: Cargo.toml  index.html
crates/cloud/src/: apns.rs  devices.rs  entitlements.rs  http.rs  keys.rs  lib.rs  main.rs  oidc.rs  push.rs  replay.rs  store.rs
crates/cloud/tests/: audit.rs  compliance_evidence.rs  entitlements_http.rs  findings.rs  ingest.rs  mutations.rs  oidc.rs  openapi.rs  pairing.rs  reads.rs  replay.rs  streaming.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs  main.rs  net_http.rs  network.rs  redbstore.rs  server.rs  store.rs  types.rs
crates/cluster/tests/: cluster.rs  http_cluster.rs  redb_durability.rs
crates/core/: Cargo.toml
crates/core/src/: agent_event.rs  audit.rs  breaker.rs  cache.rs  compliance.rs  dlp.rs  jcs.rs  ledger.rs  lib.rs  loops.rs  mcp.rs  mcpexposure.rs  mcpreport.rs  outcomes.rs  policy.rs  pricing.rs  savings.rs  taint.rs  timefmt.rs
crates/gateway/: Cargo.toml
crates/gateway/examples/: bench.rs  rugpull_demo.rs
crates/gateway/src/: backtestcli.rs  cloudsink.rs  compliancecli.rs  embedder.rs  estimate.rs  events.rs  focusexport.rs  identitymap.rs  keysreport.rs  keystats.rs  lib.rs  main.rs  mcpbroker.rs  mcpcli.rs  mcpclient.rs  mcpexposure_probe.rs  obs.rs  otel.rs  outcomescli.rs  provider.rs  proxy.rs  raft_ledger.rs  savingscli.rs  settle.rs  sink.rs  sqlq.rs  state.rs  tui.rs  wardryx.rs  wasmpolicy.rs
crates/gateway/tests/: cluster_backend.rs  keys_endpoint.rs  mcp_broker.rs  mcp_client_redirect.rs  mcp_scan_body_cap.rs  mcp_scan_exit_code.rs  mcp_scan_exposure.rs  mcp_scan_live.rs  mcp_scan_report.rs  wardryx.rs
crates/radar/: Cargo.toml  README.md  build.rs  sample-output.txt
crates/radar/radar-ebpf/: Cargo.toml
crates/radar/radar-ebpf/src/: main.rs
crates/radar/src/: main.rs
crates/tokenfuse/: Cargo.toml  README.md
crates/tokenfuse/src/: lib.rs
docs/: 01-research.md  02-architecture.md  03-roadmap.md  04-expansion-rings.md  05-open-questions.md  06-semantic-cache.md  07-taint-model.md  08-security-extensions.md  09-product-strategy.md  10-ha-cluster.md  11-hosted-cloud.md  12-mcp-credential-broker.md  13-security-hardening.md  14-mobile-companion.md  16-design-system.md  17-rugpull-demo.md  18-show-hn.md  19-wave2-governance.md  20-identity-map.md  21-tool-runs.md  22-key-lifecycle.md  23-mcp-broker-v2.md
mobile/design/: iphone.html  watch.html  web-dashboard.html
mobile/ios/: .gitignore  openapi.json  project.yml
mobile/ios/Sources/: APIClient.swift  APIModels.swift  AppDelegate.swift  Biometrics.swift  BreakerView.swift  BurnChart.swift  ConnectView.swift  Crypto.swift  DesignSystem.swift  Fuse.swift  Info.plist  Keychain.swift  Models.swift  PairView.swift  RootView.swift  Router.swift  RunDetailView.swift  RunsStore.swift  RunsView.swift  Session.swift  TokenFuseApp.swift  TokenFusePocketApp.swift
mobile/ios/Sources/Assets.xcassets/AccentColor.colorset/: Contents.json
mobile/ios/Tests/: APIClientTests.swift  CacheTests.swift  SigningTests.swift
mobile/ios/TokenFuse.xcodeproj/: project.pbxproj
mobile/ios/TokenFuse.xcodeproj/xcshareddata/xcschemes/: TokenFuse.xcscheme  TokenFuseWatch.xcscheme
mobile/ios/WatchApp/: FaceStore.swift  Info.plist  TokenFuseWatchApp.swift  WatchConfig.swift  WatchFleetView.swift  WatchRootView.swift  WatchRunKillView.swift
mobile/ios/WatchComplication/: TokenFuseComplication.swift  TokenFuseWatchComplication.entitlements
mobile/ios/Widget/: Info.plist
sdk/js/: README.md  index.d.ts  index.js  package.json  test.js
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_sdk.py
sdk/python/tokenfuse/: __init__.py
