[package]
name = "tokenfuse-cloud"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TokenFuse Cloud control plane: aggregates gateway telemetry into a per-org fleet view."

[[bin]]
name = "tokenfuse-cloud"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
