[package]
name = "tokenfuse-cloud"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TokenFuse Cloud control plane: aggregates gateway telemetry into a per-org fleet view."

[[bin]]
name = "tokenfuse-cloud"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { version = "5", features = ["axum_extras"] }
# Device pairing + Secure-Enclave-signed mutations (ES256 = ECDSA P-256/SHA-256).
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
