[package]
name = "tokenfuse-cloud"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TokenFuse Cloud control plane: aggregates gateway telemetry into a per-org fleet view."

[[bin]]
name = "tokenfuse-cloud"
path = "src/main.rs"

[dependencies]
tokenfuse-core.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { version = "5", features = ["axum_extras"] }
# Device pairing + Secure-Enclave-signed mutations (ES256 = ECDSA P-256/SHA-256).
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
# Offline OIDC / JWT bearer auth (WS4): RS256/ES256 signature + claim validation
# against a static JWKS. No network — the JWKS is supplied from env. Cloud-only;
# never pulled into tokenfuse-core.
jsonwebtoken = "9"
# APNs push (real sender) — only pulled in with `--features apns`.
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
# Build the real APNs client; needs `p256` PKCS#8/PEM for the provider JWT key.
apns = ["dep:reqwest", "p256/pkcs8", "p256/pem"]
