[package]
name = "tokenfuse-cluster"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "HA budget counters for TokenFuse: a raft-replicated ledger (openraft)"

[dependencies]
openraft = { version = "0.9", features = ["storage-v2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
