[package]
name = "tokenfuse-cluster"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "HA budget counters for TokenFuse: a raft-replicated ledger (openraft)"

[dependencies]
openraft = { version = "0.9", features = ["storage-v2", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP(S) transport (cross-process raft): a small axum server per node + a
# reqwest client network. rustls-tls so `https://` peer/admin URLs work;
# axum-server provides native TLS termination.
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redb = "4.1.0"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rcgen = "0.13"
