[package]
name = "tokenfuse-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain for TokenFuse: money, pricing, ledger, policy."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex = "1"
# Hash-chained, tamper-evident audit trail (crates/core/src/audit.rs). Already a
# transitive workspace dep (via crates/cloud); pinned here so core can hash the
# chain without an I/O dependency.
sha2 = "0.10"
