[package]
name = "tokenfuse-gateway"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokenfuse gateway: budget-enforcing proxy between agents and LLM providers."

[[bin]]
name = "tokenfuse"
path = "src/main.rs"

[dependencies]
tokenfuse-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1.89"
futures = "0.3.32"
bytes = "1.12.0"
async-stream = "0.3.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "charset"] }
ratatui = "0.30.2"
crossterm = "0.29.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
