[package]
name = "tokenfuse-gateway"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TokenFuse gateway: budget-enforcing proxy between agents and LLM providers."

[[bin]]
name = "tokenfuse"
path = "src/main.rs"

[dependencies]
tokenfuse-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1.89"
futures = "0.3.32"
bytes = "1.12.0"
async-stream = "0.3.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "charset"] }
ratatui = "0.30.2"
crossterm = "0.29.0"
datafusion = { version = "44", default-features = false, features = ["parquet"] }
wasmtime = { version = "43", optional = true, default-features = false, features = ["cranelift", "runtime", "wat"] }
fastembed = { version = "4", optional = true }
# HA: co-locate a raft node so budgets replicate across gateways. Optional — the
# heavy openraft stack is only pulled in with `--features cluster`. The crate is
# excluded from the default workspace; this path dep builds it on demand.
tokenfuse-cluster = { path = "../cluster", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
cluster = ["dep:tokenfuse-cluster"]
onnx = ["dep:fastembed"]
wasm = ["dep:wasmtime"]
