[package]
name = "tokenfuse"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TokenFuse — runtime cost control & security for AI agents. Umbrella crate; the gateway ships as the `tokenfuse` binary and Docker image (see the repository)."
readme = "README.md"
homepage = "https://github.com/TAIPANBOX/tokenfuse"
documentation = "https://docs.rs/tokenfuse"
keywords = ["llm", "agents", "finops", "budget", "proxy"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
