[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenfuse"
version = "0.0.1"
description = "Python SDK for Tokenfuse — runtime cost control for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Yurii Kostiuk" }]
keywords = ["llm", "agents", "finops", "budget", "tokenfuse"]

[project.urls]
Homepage = "https://github.com/TAIPANBOX/tokenfuse"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenfuse*"]

[tool.pytest.ini_options]
pythonpath = ["."]
